--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Metadescription -->
-  <meta name="description" content="Los mejores accesorios en tela, amplia gama de colores, texturas y tela. Todo lo que necesitas para tu hogar">
+  <meta name="description"
+    content="Los mejores accesorios en tela, amplia gama de colores, texturas y tela. Todo lo que necesitas para tu hogar">
   <!-- Metakeywords -->
-  <meta name="keywords" content="tienda de accesorios, almohadones, almohadas, telas, colores, pies de cama, almohadillas, cortinas">
+  <meta name="keywords"
+    content="tienda de accesorios, almohadones, almohadas, telas, colores, pies de cama, almohadillas, cortinas">
   <!--favIcon-->
   <link rel="shortcut icon" href="./img/favicon.jpg" type="image/x-icon">
   <!--Bootstrap-->
@@ -21,11 +23,13 @@
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200&family=Mandali&family=MonteCarlo&family=Tajawal:wght@300&family=Ysabeau+Infant:ital,wght@0,200;1,100&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amiri+Quran&family=Jost:wght@200&family=Mandali&family=MonteCarlo&family=Tajawal:wght@300&display=swap"
+    rel="stylesheet">
   <!-- title  -->
   <title> CARLA: Accesorios & Deco</title>
 
-                                            <!---------BODY SECTION--------->
+  <!---------BODY SECTION--------->
 
 <body id="index-body">
   <!---------HEADER SECTION--------->
@@ -33,20 +37,20 @@
     <!--    NavBar Bootstrap-->
     <section class="container-fluid">
       <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-propiedades-mio">
+        <nav class="navbar navbar-expand-lg  navbar-propiedades-mio col-sm-12">
           <div class="container">
-            <a class="navbar-brand " href="index.html"> Carla</a>
+            <a class="navbar-brand " href="index.html"> CARLA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
               aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon "></span>
             </button>
             <div class="collapse navbar-collapse justify-content-around " id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link" href="./pages/tienda.html">Tienda</a>
-                <a class="nav-link" href="./pages/cuidados.html">Cuidados</a>
-                <a class="nav-link" href="./pages/quienes_somos.html">Quienes Somos</a>
-                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                <a class="nav-link font-barra active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link font-barra" href="./pages/tienda.html">Tienda</a>
+                <a class="nav-link font-barra" href="./pages/cuidados.html">Cuidados</a>
+                <a class="nav-link font-barra" href="./pages/quienes_somos.html">Quienes Somos</a>
+                <a class="nav-link font-barra" href="./pages/contacto.html">Contacto</a>
               </div>
             </div>
           </div>
@@ -59,8 +63,13 @@
 
 
   <!------- MAIN SECTION ------->
-  <main id="index-main-container">
-    <section class="index-main-title">
+  <main> 
+    <div >
+
+   
+  <article id="index-main-container">
+    
+   <section class="index-main-title">
       <h1 class="animate__animated animate__zoomIn">CARLA: accesorios & deco</h1>
     </section>
 
@@ -80,8 +89,6 @@
         <br>
         Apacionadas por la costura, los colores y las texturas, traemos un lugar donde puedas encontrar lo que estas
         buscando para hacer de tu casa, un hogar.
-
-
       </p>
 
     </div>
@@ -89,28 +96,55 @@
 
     <button class="custom-btn btn-8 ir_tienda">
       <span> <a href="./pages/tienda.html">Ir a Tienda</a></span></button>
+    </article>
+  </div>
 
+ 
 
   </main>
   <!--END MAIN-->
 
   <!------- FOOTER SECTION ------->
-  <footer id="index-footer">
-    <div>
-      <br>
-      <ul class="redes">
-        <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-        <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-      </ul>
+  <footer id="footer">
 
+  <div>
+    <h4>Ciudad de Córdoba</h4>
+    <p> Córdoba Captital -Argentina</p>
+  </div>
+
+
+    <div>
+      <ul class="redes">
+        <a href="https://www.instagram.com/" target="_blank"> <img src="../img/instagram.png"
+          alt="Logo de Instagram"></a>
+      <a href="https://www.facebook.com/" target="_blank"> <img src="../img/Facebook.png" alt="Logo de Facebook"></a>
+      </ul>
     </div>
+
+      <div>
+        <h4>Horarios de atención</h4>
+      <ul>
+        Lunes a viernes: 9 a 18hs
+        Sábados: 9 a 16hs
+      </ul>
+      </div>
+      
+      <div class="icon-wha-grid">
+        <a href="https://web.whatsapp.com/" target="_blank"> <img src="../img/whatsappppp.png" alt="Logo de whatsapp"></a>
+      </div>
+   
   </footer>
   <!--END FOOTER-->
+
+  <section class="end">
+    <p>Carla</p>
+   </section>
 
   <!--bootstrap scrip-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
 </body>
-                                              <!-----------END BODY---------->
+<!-----------END BODY---------->
+
 </html>
